[gd_scene load_steps=2 format=3 uid="uid://oiewbu6eics4"]

[ext_resource type="Script" uid="uid://fevomu0ug42t" path="res://Menu/MasterSelect/master_select.gd" id="1_5datu"]

[node name="MasterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5datu")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 29.0
offset_right = 150.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 32
text = "Select Master"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MasterList" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NewMasterButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Master"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NewMasterButton" to="." method="_on_new_master_button_pressed"]
